Create Car entity with price.

--- a/Modules.CarFactory.UT/Modules.CarFactory.UT.csproj
+++ b/Modules.CarFactory.UT/Modules.CarFactory.UT.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Modules.CarFactory.Core\Modules.CarFactory.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
